[project]
name = "async-executor"
dynamic = ["version"]
description = "Async execution pool"
readme = "README.md"
authors = [
    {name = "Andrew Rabert", email = "ar@nullsum.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.6"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/nvllsvm/python-async-executor"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["async_executor.py"]

[dependency-groups]
dev = []